feat(build): upgraded to JDK 21, replaced cglib with bytebuddy, migrated servlet API to v6, replaced tomcat 7 with jetty 12 in helloworld